[package]
name = "bllvm-mesh"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Commons Mesh networking module for bllvm-node"
license = "MIT"
repository = "https://github.com/BTCDecoded/bllvm-mesh"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "mesh", "networking", "routing", "module"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

[[bin]]
name = "bllvm-mesh"
path = "src/main.rs"

[dependencies]
# bllvm-node for module system integration
bllvm-node = { path = "../blvm-node", package = "bllvm-node" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
secp256k1 = { version = "0.28", features = ["rand"] }
sha2 = "0.10"
hex = "0.4"

# Lightning invoice parsing (for payment verification)
lightning-invoice = "0.2"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Command-line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Futures for async streams
futures = "0.3"

# Concurrent data structures (lock-free reads)
dashmap = "5.5"
lru = "0.12"

[dev-dependencies]
# Testing
tokio-test = "0.4"

